--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -58,4 +58,46 @@
   .statusNotification {
     background-color: var(--theme-recovery-phrase-attention-background-color);
   }
+
+  .paperWallet {
+    background-color: var(
+      --theme-recovery-phrase-paper-wallet-background-color
+    );
+    border-radius: 13px;
+    color: var(--theme-recovery-phrase-paper-wallet-text-color);
+    display: inline-block;
+    font-family: var(--font-medium);
+    font-size: 14px;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 24px 0 8px;
+
+    &:after {
+      background-color: var(
+        --theme-recovery-phrase-paper-wallet-question-background-color
+      );
+      border-radius: 50%;
+      color: black;
+      color: var(--theme-recovery-phrase-paper-wallet-question-text-color);
+      content: '?';
+      display: inline-block;
+      font-family: var(--font-bold);
+      font-size: 12px;
+      height: 14px;
+      line-height: 14px;
+      margin-left: 2px;
+      position: absolute;
+      right: 6px;
+      text-align: center;
+      top: 4px;
+      width: 14px;
+    }
+
+    :global {
+      .SimpleBubble_bubble {
+        white-space: normal;
+        width: 344px;
+      }
+    }
+  }
 }
