Enable the Recovery Phrase Verification feature on ITN (#2008)
* [DDW-193] Enabling on ITN

* [DDW-193] Enable other wordCounts

* [DDW-193] Adjustments

* [DDW-193] Adjustments

* [DDW-193] Adjustments

* [DDW-193] Storybook adjustment

* [DDW-193] Tests init - restoring multiple wallets

* [DDW-193] Tests - progress

* [DDW-193] Adjustments

* [DDW-193] Uncomment working tests

* [DDW-193] Uncomment working tests

* [DDW-193] Improves logic for getting the newPublicId

* [DDW-193] Remove legacy wallets

* [DDW-193] Remove non-shelley support

* [DDW-193] Correct logic for showing feature

* [DDW-193] CHANGELOG

* [DDW-193] Re-enable the feature for Byron builds

* [DDW-193] Adjustments

* [DDW-193] Re-adding the Paper Wallet tooltip

* [DDW-193] Japanese adjustment

* [DDW-193] Japanese adjustment

--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -2,6 +2,7 @@
   color: var(--theme-bordered-box-text-color);
   font-family: var(--font-light);
   line-height: 1.38;
+  margin-top: 20px;
 
   h2 {
     color: var(--theme-input-label-color);
