[DDW-131] - Connecting a hardware wallet

--- a/source/renderer/app/components/sidebar/SidebarCategory.scss
+++ b/source/renderer/app/components/sidebar/SidebarCategory.scss
@@ -42,6 +42,13 @@
   }
 }
 
+.hardwareWalletsIcon {
+  & > svg {
+    height: 44px;
+    width: 44px;
+  }
+}
+
 .paperWalletCreateCertificateIcon {
   & > svg {
     height: 21px;
