--- a/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
+++ b/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
@@ -73,7 +73,6 @@
         .hardwareWalletStep {
           align-items: center;
           background-color: var(--theme-hardware-wallet-step-background-color);
-          border: 1px solid var(--theme-input-border-color);
           display: flex;
           height: 72px;
           justify-content: space-between;
@@ -81,10 +80,16 @@
 
           &:first-child {
             border-radius: 4px 4px 0 0;
+            border-left: 1px solid var(--theme-input-border-color);
+            border-right: 1px solid var(--theme-input-border-color);
+            border-top: 1px solid var(--theme-input-border-color);
           }
 
           &:nth-child(2) {
             border-radius: 0 0 4px 4px;
+            border-bottom: 1px solid var(--theme-input-border-color);
+            border-left: 1px solid var(--theme-input-border-color);
+            border-right: 1px solid var(--theme-input-border-color);
           }
 
           .hardwareWalletInnerStep {
