[DDW-131] - Connecting a hardware wallet - fixing issues

--- a/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
+++ b/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
@@ -66,15 +66,27 @@
   }
 }
 
-.title {
-  color: var(--theme-sidebar-menu-item-wallet-name-color);
-  font-family: var(--font-regular);
-  font-size: 18px;
-  line-height: 1.5em;
-  margin-top: -5.5px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.topContainer {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+
+  .title {
+    color: var(--theme-sidebar-menu-item-wallet-name-color);
+    font-family: var(--font-regular);
+    font-size: 18px;
+    line-height: 1.5em;
+    margin-top: -5.5px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .disconnectedIcon {
+    height: 21px;
+    object-fit: contain;
+    width: 21px;
+  }
 }
 
 .info {
