[DDW-250] - Improve hardware wallets theming

--- a/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
+++ b/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
@@ -139,7 +139,8 @@
 
           &.isActiveFetchingDevice,
           &.isActiveExport {
-            border: 1px solid var(--theme-hardware-wallet-step-border-active-color);
+            border: 1px solid
+              var(--theme-hardware-wallet-step-border-active-color);
           }
 
           &.isErrorDevice,
