[DDW-250] - Improve hardware wallets theming - quick fix for icon width

--- a/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
+++ b/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
@@ -146,6 +146,10 @@
             margin-top: -5px;
             object-fit: contain;
             width: 16px;
+
+            svg > g > path {
+              stroke-width: 5px;
+            }
           }
 
           .clearIcon {
