--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -23,6 +23,7 @@
     font-style: italic;
     justify-content: space-between;
     padding: 10px;
+    margin-top: 10px;
   }
   .statusIcon {
     margin-right: 20px;
