[DDW-197] Adds Trezor icon

--- a/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
+++ b/source/renderer/app/components/hardware-wallet/settings/ConnectHardwareWallet.scss
@@ -18,10 +18,10 @@
       height: 100%;
       justify-content: center;
 
-      .hardwareWalletTrezor {
+      .hardwareWalletUnknown {
         display: flex;
 
-        .trezorIcon {
+        .unknownDeviceIcon {
           height: 138px;
           object-fit: contain;
           width: 325.5px;
@@ -50,6 +50,25 @@
           height: 75px;
           object-fit: contain;
           width: 250px;
+        }
+
+        svg > path {
+          stroke: var(--theme-hardware-wallet-title-color);
+
+          > g {
+            fill: var(--theme-hardware-wallet-title-color);
+          }
+        }
+      }
+
+      .hardwareWalletTrezor {
+        display: flex;
+        flex-direction: column;
+
+        .trezorIcon {
+          height: 138px;
+          object-fit: contain;
+          width: 70.5px;
         }
 
         svg > path {
@@ -95,17 +114,22 @@
           padding: 20px;
 
           &:first-child {
-            border-left: 1px solid var(--theme-hardware-wallet-step-border-color);
+            border-left: 1px solid
+              var(--theme-hardware-wallet-step-border-color);
             border-radius: 4px 4px 0 0;
-            border-right: 1px solid var(--theme-hardware-wallet-step-border-color);
+            border-right: 1px solid
+              var(--theme-hardware-wallet-step-border-color);
             border-top: 1px solid var(--theme-hardware-wallet-step-border-color);
           }
 
           &:nth-child(2) {
-            border-bottom: 1px solid var(--theme-hardware-wallet-step-border-color);
-            border-left: 1px solid var(--theme-hardware-wallet-step-border-color);
+            border-bottom: 1px solid
+              var(--theme-hardware-wallet-step-border-color);
+            border-left: 1px solid
+              var(--theme-hardware-wallet-step-border-color);
             border-radius: 0 0 4px 4px;
-            border-right: 1px solid var(--theme-hardware-wallet-step-border-color);
+            border-right: 1px solid
+              var(--theme-hardware-wallet-step-border-color);
           }
 
           .hardwareWalletInnerStep {
