--- a/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
+++ b/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
@@ -3,6 +3,7 @@
 
 .component {
   @include button;
+  align-items: center;
   background-color: var(--theme-sidebar-menu-background-color);
   color: var(--theme-sidebar-menu-item-wallet-name-color);
   display: flex;
