[DDW-197] - Implement ledger hw support - ui fixes

--- a/source/renderer/app/components/hardware-wallet/status/HardwareWalletStatus.scss
+++ b/source/renderer/app/components/hardware-wallet/status/HardwareWalletStatus.scss
@@ -184,12 +184,13 @@
           }
 
           &.isActiveFetching,
-          &.isActiveExport {
+          &.isActiveExport,
+          &.isVerifyTx {
             border: 1px solid
               var(--theme-hardware-wallet-step-border-active-color);
           }
 
-          &.isErrorDevice,
+          &.isError,
           &.isErrorExport {
             border: 1px solid var(--rp-theme-color-error);
           }
