--- a/source/renderer/app/components/hardware-wallet/status/HardwareWalletStatus.scss
+++ b/source/renderer/app/components/hardware-wallet/status/HardwareWalletStatus.scss
@@ -1,61 +1,27 @@
-.hardwareWalletStep {
+.component {
   align-items: center;
-  background-color: var(--theme-hardware-wallet-step-background-color);
+  background-color: var(--theme-hardware-wallet-status-background-color);
+  border: 1px solid var(--theme-hardware-wallet-status-border-color);
+  border-radius: 4px;
   display: flex;
   height: 72px;
   justify-content: space-between;
   padding: 20px;
 
-  &:first-child {
-    border-left: 1px solid var(--theme-hardware-wallet-step-border-color);
-    border-radius: 4px 4px 0 0;
-    border-right: 1px solid var(--theme-hardware-wallet-step-border-color);
-    border-top: 1px solid var(--theme-hardware-wallet-step-border-color);
-  }
-
-  &:nth-child(2) {
-    border-bottom: 1px solid var(--theme-hardware-wallet-step-border-color);
-    border-left: 1px solid var(--theme-hardware-wallet-step-border-color);
-    border-radius: 0 0 4px 4px;
-    border-right: 1px solid var(--theme-hardware-wallet-step-border-color);
-  }
-
-  .hardwareWalletInnerStep {
+  .message {
     align-items: center;
     display: flex;
-
-    .ledgerSmallIcon {
-      height: 32px;
-      margin-right: 20px;
-      object-fit: contain;
-      width: 32px;
-    }
-
-    .exportIcon {
-      cursor: pointer;
-      height: 24px;
-      margin-right: 29px;
-      object-fit: contain;
-      width: 24px;
-    }
-  }
-
-  span {
-    color: var(--theme-hardware-wallet-step-color);
+    color: var(--theme-hardware-wallet-status-color);
     font-family: var(--font-light);
     font-size: 16px;
     font-weight: 300;
     line-height: 1.38;
-
-    span {
-      font-family: var(--font-medium);
-      font-weight: 500;
-    }
+    padding-right: 20px;
   }
 
   .checkIcon {
     height: 16px;
-    margin-top: -5px;
+    margin-right: 5px;
     object-fit: contain;
     width: 16px;
 
@@ -66,32 +32,37 @@
 
   .clearIcon {
     height: 14px;
-    margin-top: -4px;
+    margin-right: 6px;
     object-fit: contain;
     width: 14px;
   }
 
-  &.isActiveFetching,
-  &.isActiveExport,
-  &.isVerifyTx {
-    border: 1px solid var(--theme-hardware-wallet-step-border-active-color);
+  &.isReady {
+    border: 1px solid var(--theme-hardware-wallet-status-ready-color);
   }
 
-  &.isError,
-  &.isErrorExport {
+  &.isError {
     border: 1px solid var(--rp-theme-color-error);
+  }
+
+  :global {
+    .LoadingSpinner_component {
+      height: 24px;
+      margin: initial;
+      width: 24px;
+
+      .LoadingSpinner_icon svg path {
+        fill: var(--theme-hardware-wallet-message-color) !important;
+        opacity: 0.5;
+      }
+    }
   }
 }
 
-:global {
-  .LoadingSpinner_component {
-    height: 24px;
-    margin: initial;
-    width: 24px;
-
-    .LoadingSpinner_icon svg path {
-      fill: var(--theme-hardware-wallet-message-color) !important;
-      opacity: 0.5;
-    }
-  }
+.errorText {
+  color: var(--rp-theme-color-error);
+  font-family: var(--font-regular);
+  font-size: 16px;
+  margin-top: 20px;
+  text-align: center;
 }
