--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -8,9 +8,11 @@
     transition: all 400ms ease;
 
     .newPassword,
-    .currentPassword,
-    .repeatedPassword {
+    .currentPassword {
       margin-bottom: 20px;
+    }
+    .repeatedPassword {
+      margin-bottom: 40px;
     }
 
     .passwordInstructions {
