[DDW-170] Fix dialog and password instruction styles

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -4,21 +4,18 @@
 .dialog {
   font-family: var(--font-light);
   .spendingPasswordFields {
-    overflow: hidden;
     transition: all 400ms ease;
 
     .newPassword,
     .currentPassword {
       margin-bottom: 20px;
     }
-    .repeatedPassword {
-      margin-bottom: 10px;
-    }
 
     .passwordInstructions {
       color: var(--theme-dialog-text-color);
       font-family: var(--font-light);
       line-height: 1.38;
+      margin-top: 10px;
     }
   }
 
