--- a/source/renderer/app/components/widgets/Dialog.scss
+++ b/source/renderer/app/components/widgets/Dialog.scss
@@ -29,6 +29,7 @@
     margin-right: -25px;
     overflow-x: hidden;
     overflow-y: overlay;
+    padding-bottom: 30px;
     padding-right: 25px;
     scroll-behavior: smooth;
   }
@@ -36,7 +37,6 @@
   & > .actions {
     display: flex;
     flex-shrink: 0;
-    margin-top: 30px;
 
     button {
       width: 50%;
