--- a/source/renderer/app/components/loading/syncing-connecting/StatusIcons.scss
+++ b/source/renderer/app/components/loading/syncing-connecting/StatusIcons.scss
@@ -72,3 +72,20 @@
     @include animated-ellipsis($width: 16px);
   }
 }
+
+.tooltip {
+  display: flex;
+  margin-right: 12px;
+  &:last-child {
+    margin-right: 0;
+  }
+  :global .SimpleBubble_root {
+    font-size: 14px;
+    > div {
+      border-radius: 5px;
+      margin-left: 10px;
+      padding-bottom: 7px;
+      transform: translateX(-45%);
+    }
+  }
+}
