--- a/source/renderer/app/components/sidebar/SidebarCategory.scss
+++ b/source/renderer/app/components/sidebar/SidebarCategory.scss
@@ -49,6 +49,13 @@
   }
 }
 
+.redeemItnRewardsIcon {
+  & > svg {
+    height: 44px;
+    width: 44px;
+  }
+}
+
 .paperWalletCreateCertificateIcon {
   & > svg {
     height: 21px;
