Update stake pool list Api endpoint integration

--- a/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolTooltip.scss
@@ -283,13 +283,11 @@
 
   .ranking,
   .profitMargin,
-  .cost,
-  .performance {
+  .cost {
     width: 35%;
   }
 
-  .ranking,
-  .performance {
+  .ranking {
     position: relative;
   }
 }
