[DDW-178] Step 1 - progress

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -19,3 +19,14 @@
 .walletsDropdown {
   margin-bottom: 20px;
 }
+
+hr {
+  background-color: rgba(36, 62, 98, 0.96);
+  border: none;
+  height: 1px;
+  margin-bottom: 17px;
+}
+
+.checkbox1 {
+  margin-bottom: 20px;
+}
