--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -1,2 +1,32 @@
 .component {
 }
+
+.sectionLabel {
+  color: #ffffff;
+  font-family: var(--font-medium);
+  font-size: 16px;
+  font-stretch: normal;
+  font-style: normal;
+  font-weight: 500;
+  height: 22px;
+  letter-spacing: normal;
+  line-height: 1.38;
+  margin-bottom: 6px;
+  width: 20px;
+}
+
+.sectionStringValue {
+  color: rgba(255, 255, 255, 0.5);
+  font-family: var(--font-regular);
+  font-size: 16px;
+  font-stretch: normal;
+  font-style: normal;
+  font-weight: 500;
+  height: 22px;
+  letter-spacing: normal;
+  line-height: 1.38;
+  width: 540px;
+  b {
+    font-family: var(--font-medium);
+  }
+}
